Kubernetes Project/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: divyajag/simple_blog
          ports:
            - containerPort: 3000
          resources:
              limits:
                memory: "128Mi"
                cpu: "500m"
